# alyn

./: .gitignore  .gitmodules  6x13-ISO8859-8_8c.html  9x18-ISO8859-8_8c.html  CMakeLists.txt  HandleUartMsg_8cpp.html  HandleUartMsg_8h.html  HandleUartMsg_8h_source.html  IHandleMsg_8h.html  IHandleMsg_8h_source.html  IHandleUartMsg_8h.html  IHandleUartMsg_8h_source.html  IProtocolParser_8h.html  IProtocolParser_8h_source.html  IUart_8h.html  IUart_8h_source.html  ProtoclDataStructures_8h.html  ProtoclDataStructures_8h_source.html  ProtocolStateMachine_8cpp.html  ProtocolStateMachine_8h.html  ProtocolStateMachine_8h_source.html  README.md  README_8md.html  SignalManager_8h.html  SignalManager_8h_source.html  ThreadPool_8cpp.html  ThreadPool_8h.html  ThreadPool_8h_source.html  UartProtocolParser_8h.html  UartProtocolParser_8h_source.html  add__doxygen__groups__to__file_8py.html  annotated.html  arrawkey_8cpp.html  arrawkey_8h.html  arrawkey_8h_source.html  banner_8c.html  banner_8h.html  banner_8h_source.html  banner__effect__1_8c.html  banner__effect__2_8c.html  (+707 more)
common/: CMakeLists.txt
common/comm_protocol/: CMakeLists.txt  IProtocolParser.h  tags
common/comm_protocol/protocol-v1/: IHandleMsg.h  ProtoclDataStructures.h  ProtocolStateMachine.h  UartProtocolParser.h  messages.h
common/common/: CMakeLists.txt
common/effects/src/: banner.c  banner.h  canvas.c  canvas.h  effect.c  effect.h  font.c  font.h  font_base.h  frame.c  frame.h  led_matrix.c  led_matrix.h  rect.c  rect.h  u8.c  u8.h
common/hal/: CMakeLists.txt
common/hal/linux/: CMakeLists.txt  uart_linux.cpp  uart_linux.h
common/hal/windows/: CMakeLists.txt  timing.c  uart_win.cpp
common/hal/zephyr/: uart_shell.h
common/luaEffects/: CMakeLists.txt  lua_fw_to_c.py
common/luaEffects/lua-5.4.6/: CMakeLists.txt
common/luaEffects/lua-5.4.6/lua.junk/: t2.lua.junk
common/luaEffects/lua-5.4.6/src/: lapi.c  lauxlib.h  lbaselib.c  lcode.h  lcorolib.c  lctype.h  ldblib.c  ldebug.c  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.h  linit.c  ljumptab.h  llex.h  lmathlib.c  lmem.h  lobject.h  lopcodes.c  loslib.c  lparser.c  lprefix.h  lstate.c  lstring.c  lstring.h  lstrlib.c  ltable.c  ltable.h  ltablib.c  ltm.c  lua.c  lua.h  luac.c  luaconf.h  lualib.h  lundump.c  lutf8lib.c  lvm.c  (+2 more)
common/luaEffects/luac/: CMakeLists.txt  lua_memory.h
common/luaEffects/src/: CMakeLists.txt  banner_effect_1.c  banner_effect_2.c  frame_effect.c  lgamelib.c  luasrc.c  luasrc.h  obj.c  obj.h  rect.c
common/luaEffects/src/luasrc/: bouncing_balls.lua  demo1.lua  demo3.lua  game_config.lua  loop.lua  moving_text.lua  scrolling_color.lua  simple_fireworks.lua
common/utils/: CMakeLists.txt  ThreadPool.h  logger.c  logger.h  lua_memory.h  system_model.c  system_model.h  timing.h
game/: CMakeLists.txt
game-controller/: CMakeLists.txt  README.md  jtag.info  luac  prj.conf
game-controller/boards/: nucleo_f429zi.overlay  stm32f4_disco.overlay
game-controller/docs/: Doxyfile
game-controller/libs/lua/: CMakeLists.txt  lauxlib.h  lmathlib.c  lstate.c  ltablib.c  lua  lua.c
game-controller/lua/: color.lua  game1.lua
game-controller/src/: HandleUartMsg.h  banner.c  banner.h  buttons.c  buttons.h  canvas.c  canvas.h  display.c  display.h  font.h  frame.c  frame.h  game.c  game.h  gpio.c  hwctl.c  hwctl.h  led_matrix.c  led_matrix.h  lgamelib.c  lua_memory.c  luasrc.h  main.c  parser_task.cpp  parser_task.h  shell.c  system_model.c  system_model.h  timing.c  timing.h
game-controller/src/fonts/: 6x13-ISO8859-8.c
game-pc/led_matrix_simulator/: CMakeLists.txt  arrawkey.h  ledcircle.cpp  ledcircle.h  ledmatrix.cpp  ledmatrix.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.pro  terminaltextedit.h  threadedworker.cpp
game-pc/test/: CMakeLists.txt  load_lua.cpp  test1.cpp
game/comm_protocol/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
game/comm_protocol/protocol-v1/: .HandleUartMsg.cpp.swp  .HandleUartMsg.h.swp  .ProtocolParser.cpp.swn  .ProtocolParser.cpp.swo  .ProtocolParser.cpp.swp  .ProtocolParser.h.swm  .ProtocolParser.h.swn  .ProtocolParser.h.swp  .messages.h.swo  ProtocolStateMachine.h
game/comm_protocol/test/: .CMakeLists.txt.swp  .HandleUartMsg.h.swp  .load_lua.cpp.swp  .test1.cpp.swo  CMakeLists.txt  load_lua.cpp  test1.cpp
game/common/: .ThreadPool.cpp.swp  .signals.h.swp  CMakeLists.txt  logger.c  system_model.c  system_model.h  timing.c  timing.h
game/effects/: CMakeLists.txt  lua_fw_to_c.py
game/effects/lua/: bouncing_balls.lua  demo1.lua  game_config.lua  loop.lua  t2.lua
game/effects/src/: 9x18-ISO8859-8.c  CMakeLists.txt  banner.c  banner.h  canvas.c  canvas.h  effect.c  effect.h  frame.c  frame.h  frame_lua_effect.c  frame_lua_effect.h  led_matrix.c  led_matrix.h  luasrc.c  luasrc.h  timing.c  timing.h  u8.h
game/effects/src/lua/: banner_effect_1.c  banner_effect_2.c  (+5 more)
game/hal/: CMakeLists.txt
game/hal/linux/: uart_linux.cpp
game/hal/zephyr/: .CMakeLists.txt.swp  .uart_zephyr.cpp.swo  uart_shell.cpp  uart_zephyr.cpp
game/led_matrix_simulator/: CMakeLists.txt  arrawkey.cpp  arrawkey.h  chessboardwidget.cpp  chessboardwidget.h  keypad.cpp  keypad.h  ledcircle.cpp  ledcircle.h  ledmatrix.cpp  ledmatrix.h  lgamelib.c  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  terminaltextedit.cpp  terminaltextedit.h  threadedworker.cpp  threadedworker.h
game/lua-5.2.4/: CMakeLists.txt
game/lua-5.2.4/src/: .lualib.h.swp  linit.c  lua  lua.c  luac  lualib.h
game/lua-5.4.6/: CMakeLists.txt  lua_fw_to_c.py  luasrc.c  luasrc.h  memory.c
game/lua-5.4.6/src/: .lua.c.swp  lauxlib.c  lauxlib.h  linit.c  lua.c  lualib.h
game/luaEffects/: CMakeLists.txt
game/luaEffects/lua-5.4.6/: CMakeLists.txt  luasrc.c.in  memory.c
game/luaEffects/luac/: CMakeLists.txt
game/luaEffects/src/: CMakeLists.txt  banner_effect_1.c  banner_effect_2.c  frame_effect.c  lgamelib.c  obj.c  rect.c
game/src/: .HandleUartMsg.cpp.swp  .HandleUartMsg.h.swp  HandleUartMsg.cpp  HandleUartMsg.h  game_api.h
src/lua/: CMakeLists.txt  ldo.c  linit.c  liolib.c  lstate.c  lstate.h
(+263 files in other folders)
