
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/hal )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/utils )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/comm_protocol )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/effects )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/luaEffects/luac )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/luaEffects )







