add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/hal )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/comm_protocol )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/effects )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/lua-5.4.6 )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/led_matrix_simulator )


#add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/tests )




