
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/hal )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/common )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/comm_protocol )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/effects )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/luaEffects/luac )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/luaEffects )
add_subdirectory (${CMAKE_CURRENT_SOURCE_DIR}/led_matrix_simulator )







